# kindle_daily_sale_twitter_bot

./: .env  .gitignore  Cargo.toml  README.md  twitter_settings
.github/workflows/: tweet.yml
src/: main.rs
src/amazon_crawler/: mod.rs
src/common/: consumer_key  consumer_secret  mod.rs
src/twitter_api/: auth.rs  create_tweet.rs  delete_all_tweet.rs  mod.rs  unfollow_all_user.rs
