[package]
name = "kindle_daily_sale_twitter_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.22"
dotenv = "0.15.0"
egg-mode = "0.16.0"
futures = "0.3.24"
tokio = {version = "1.21.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = {version = "0.10", features = ["blocking"]}
scraper = "0.13.0"
select = "0.5.0"
structopt = "0.3.26"
yansi = "0.5.1"

[[bin]]
name="delete_all_tweet"
path="src/twitter_api/delete_all_tweet.rs"

[[bin]]
name="unfollow_all_user"
path= "src/twitter_api/unfollow_all_user.rs"